# lab2_1

./: Laboratorio2_gr1.7z  lab2.7z
Laboratorio2_gr1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Laboratorio2_gr1/Archivos.csv/: lista_reales1.csv  lista_reales2.csv  lista_reales3.csv  lista_reales4.csv  lista_reales5.csv  lista_reales6.csv
Laboratorio2_gr1/include/: lib1.h  lib_gr1.h
Laboratorio2_gr1/src/: files_ops1.c  funciones_gr1.c  main.c
